compiler/tools/fpp-check/test/state_machine/typed_elements/junction_u32_bool_transitive.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/junction_u32_bool_transitive.fpp:9.5
    choice J1 { if g enter T else enter T }
    ^
error: type mismatch at junction
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/junction_u32_bool_transitive.fpp:11.5
    on s2 enter J1
    ^
type of transition is bool
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/junction_u32_bool_transitive.fpp:8.5
    choice J { if g enter J1 else enter T }
    ^
type of transition is U32
